opam-version: "1.2"
maintainer: "philippe.wang@gmail.com"
authors: [ "Philippe Wang <philippe.wang@gmail.com>" ]
license: "ISC"
homepage: "https://github.com/ocaml/omd"
depends: [
  "base-bytes"
  "base-bigarray"
  "jbuilder" {build & >= "1.0+beta10"}
]
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "runtest" "-p" name]
]
tags: [
  "org:ocamllabs"
  "org:mirage"
]
