opam-version: "1.2"
maintainer: "Philippe Wang <philippe.wang@gmail.com>"
authors: [ "Philippe Wang <philippe.wang@gmail.com>" ]
version: "1.3.1"
authors: [ "Philippe Wang <philippe.wang@gmail.com>" ]
license: "ISC"
homepage: "https://github.com/ocaml/omd"
dev-repo: "https://github.com/ocaml/omd.git"
bug-reports: "https://github.com/ocaml/omd/issues"
tags: [ "org:ocamllabs" "org:mirage"  ]
depends: [
  "base-bytes"
  "base-bigarray"
  "jbuilder" {build & >= "1.0+beta10"}
]
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  ["jbuilder" "runtest" "-p" name]
]
