(ocamllex auxlex htmllex)

(library
 (name omd)
 (public_name omd)
 (modules htmllex sub block inline lexer parser representation backend omd utils auxlex)
 (libraries bigarray))

(executable
 (name simple_main)
 (public_name omd)
 (modules simple_main)
 (libraries omd))

(alias
 (name default)
 (deps simple_main.exe))
