(executable
 (name extract_tests)
 (libraries str)
 (modules extract_tests))

(rule
 (with-stdout-to
  dune.inc.new
  (run ./extract_tests.exe -write-dune-file
       %{dep:spec.txt}
       %{dep:attributes.md}
       %{dep:def_list.md})))

(include dune.inc)

(executable
 (name omd)
 (libraries str omd)
 (modules omd))

(rule
 (alias gen)
 (action (diff dune.inc dune.inc.new)))
