(executable
 (name extract_tests)
 (libraries str lambdasoup)
 (modules extract_tests))

;  Generate and run tests for the core omd package
(rule
 (with-stdout-to
  dune.inc.new
  (run ./extract_tests.exe -write-dune-file
       %{dep:spec.txt}
       %{dep:attributes.md}
       %{dep:def_list.md})))

(include dune.inc)

(executable
 (name omd)
 (libraries str omd omd_tyxml tyxml lambdasoup)
 (modules omd))

;  Generate the rules for diff-based tests
(rule
 (alias gen)
 (action
  (diff dune.inc dune.inc.new)))
