(library
 (name expect_tests)
 (modules expect_tests)
 (inline_tests)
 (preprocess
  (pps ppx_expect))
 (libraries omd))

(executable
 (name extract_tests)
 (libraries str)
 (modules extract_tests))

(rule
 (with-stdout-to
  dune.inc.new
  (run
   ./extract_tests.exe
   -write-dune-file
   %{dep:spec.txt}
   %{dep:gfm_table_spec.md}
   %{dep:extra_table_tests.md}
   %{dep:attributes.md}
   %{dep:def_list.md})))

(include dune.inc)

(executable
 (name omd_pp)
 (libraries str omd)
 (modules omd_pp))

(executable
 (name omd)
 (libraries str omd)
 (modules omd))

(rule
 (alias gen)
 (action
  (diff dune.inc dune.inc.new)))
