(rule
 (targets tag.html.out)
 (deps tag.md)
 (action (with-stdout-to %{targets} (run omd %{deps}))))

(alias
 (name tag)
 (action (diff tag.html tag.html.out)))

(executable
 (name uppercase)
 (public_name omd_uppercase)
 (libraries omd))

(rule
 (targets tag_uppercase.html.out)
 (deps tag_uppercase.md)
 (action (with-stdout-to %{targets} (run omd_uppercase %{deps}))))

(alias
 (name tag_uppercase)
 (action (diff tag_uppercase.html tag_uppercase.html.out)))

(alias
 (name runtest)
 (deps (alias tag)
       (alias tag_uppercase)))
