(rule
 (targets tag.html.out)
 (deps tag.md)
 (action (with-stdout-to %{targets} (run omd %{deps}))))

(rule
 (alias tag)
 (action (diff tag.html tag.html.out)))

(executable
 (name uppercase)
 (public_name omd_uppercase)
 (package omd)
 (libraries omd))

(rule
 (targets tag_uppercase.html.out)
 (deps tag_uppercase.md)
 (action (with-stdout-to %{targets} (run omd_uppercase %{deps}))))

(rule
 (alias tag_uppercase)
 (action (diff tag_uppercase.html tag_uppercase.html.out)))

(alias
 (name runtest)
 (deps (alias tag)))
       ;; (alias tag_uppercase)))
