(rule
 (targets attr-link-data.html.out)
 (deps attr-link-data.md)
 (action (with-stdout-to %{targets} (run omd %{deps}))))

(rule
 (alias attr-link-data)
 (action (diff attr-link-data.html attr-link-data.html.out)))

(rule
 (targets attr-link-id.html.out)
 (deps attr-link-id.md)
 (action (with-stdout-to %{targets} (run omd %{deps}))))

(rule
 (alias attr-link-id)
 (action (diff attr-link-id.html attr-link-id.html.out)))

(rule
 (targets attr-link-classes.html.out)
 (deps attr-link-classes.md)
 (action (with-stdout-to %{targets} (run omd %{deps}))))

(rule
 (alias attr-link-classes)
 (action (diff attr-link-classes.html attr-link-classes.html.out)))

(alias
 (name runtest)
 (deps (alias attr-link-data)
       (alias attr-link-classes)
       (alias attr-link-id)))
