(rule
 (targets attr-ref-data.html.out)
 (deps attr-ref-data.md)
 (action (with-stdout-to %{targets} (run omd %{deps}))))

(alias
 (name attr-ref-data)
 (action (diff attr-ref-data.html attr-ref-data.html.out)))

(rule
 (targets attr-ref-id.html.out)
 (deps attr-ref-id.md)
 (action (with-stdout-to %{targets} (run omd %{deps}))))

(alias
 (name attr-ref-id)
 (action (diff attr-ref-id.html attr-ref-id.html.out)))

(rule
 (targets attr-ref-classes.html.out)
 (deps attr-ref-classes.md)
 (action (with-stdout-to %{targets} (run omd %{deps}))))

(alias
 (name attr-ref-classes)
 (action (diff attr-ref-classes.html attr-ref-classes.html.out)))

(alias
 (name runtest)
 (deps (alias attr-ref-data)
       (alias attr-ref-classes)
       (alias attr-ref-id)))
